# serialized-linked-list

./: .clang-format  CMakeLists.txt  README.md
include/: TestFramework.h
src/: App.cpp  App.hpp  LinkedList.cpp  LinkedList.hpp  LinkedListSerializer.cpp  LinkedListSerializer.hpp  Parser.cpp  Parser.hpp  main.cpp
test/: TestParser.cpp  TestSerializer.cpp  TestUtils.hpp
